2004-04-26 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
         
        * cong-edit-find-and-replace.c: New find and replace implementation
	mostly taken from gedit/dialogs/gedit-replace-dialog.c
	
	* cong-edit-find-and-replace.h: Defined structure to hold current
	find data.

	* cong-document.c, cong-document.h: Structure that describe
	current find data associated with document
	* cong-selection.h, select.c, xmledig.c: New function
	cong_selection_get_selected_text now used in xmledit.c
	and cong-edit-find-and-replace.c

2004-04-17  David Hoover <karma@deadmoose.com>

	Changes to LOTS of files, adding gtk-doc style comments to most
        functions. (Bug 123318) Lots are currently placeholder comments,
        and will be filled in later.

2004-03-17  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Enabled useless, but harmless lines on cong-marshal.[ch] generation.

2004-03-15  Geert Stappers <stappers@stappers.nl>

	* marshal.make

	New file, but it is just a workaround.
	(see http://bugzilla.gnome.org/show_bug.cgi?id=137248 for details)

	* Makefile.am

	marshal.make for the time being in the tarball.

2004-03-15  Johannes H?lzl <johannes.hoelzl@gmx.de> (ChangeLog by GSt)

	* cong.marshal

	New file

	* Makefile.am

	Generate cong-marshal.c & cong-marshal.h from cong.marshal

	* cong-marshal.c & cong-marshal.h

	The generated files

	* cong-document.c

	Use the generated names

2004-03-08  Geert Stappers <stappers@stappers.nl>

	* cong-file-export.c, cong-file-properties.c

	C99ismes removed, now it compiles on gcc 2.95

2004-03-08  David Hoover <karma@deadmoose.com>

	* cong-dom-view.c, cong-error-dialog.c, cong-file-export.c, cong-file-properties.c

	Fixes for Bug #122813; eliminate markup inside translated strings

2004-03-02  Geert Stappers <stappers@stappers.nl>

	* cong-primary-window.c, cong-util.c, plugin-admonition-node-element.c
	  The icons are now in DATADIR/pixmaps/conglomerate

2004-03-05  Toshio Kuratomi <toshio@tiki-lounge.com>