@@ -1,3 +1,13 @@
+2004-04-29 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
+
+        * cong-error-dialog.h, cong-error-dialog.c: Add new
+	parameters to function cong_error_dialog_with_convenience
+	that defines the stock for cancel button and
+	the default button of dialog.
+	
+	* cong-error-file-open.c, cong-file-open.c, plugin-validate.c:
+	Updated use of those function.
+
 2004-04-26 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
          
         * cong-edit-find-and-replace.c: New find and replace implementation
